# MegaByte

DeCountdownTimer/: index.html  main.css
opdracht-1/: index.html  script.js  style.css
opdracht-10/: .gitignore  Makefile  acronym.py  main.c
opdracht-24/: CMakeLists.txt
opdracht-24/cmake/: embed_resources.cmake
opdracht-24/src/: main.cpp
opdracht-9/: .gitignore  Makefile  main.c
